# bible-on-site

./: .codacy.yml  .gitattributes  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  bible-on-site.sln  biome.json  codecov.yml  jobs_deploy.json  license  package-lock.json  package.json  renovate.json  sonar-project.properties  task-def-no-health.json  validate_lambda_parser.py
data/: .dev.env  .test.env  Cargo.toml  Makefile.toml  README.md
data/.config/: nextest.toml
data/929/dates-generator/: main.ipynb  main.py  pyproject.toml
data/aggregations/texts/: tanah_view.txt
data/annotations/: perakim-headers.yml
data/articles/: README.md  article-resources-mapping.txt
data/authors/: Cargo.toml
data/authors/src/: lib.rs
data/mysql/: perushim_structure.sql  tanah_dev_data.sql  tanah_dynamic_structure.sql  tanah_sefarim_and_perakim_data.sql  tanah_static_structure.sql  tanah_structure.sql  tanah_test_data.sql  tanah_truncate.sql  tanahpedia_alter_source_citation.sql  tanahpedia_family_edge_lab_data.sql  tanahpedia_family_jacob_data.sql  tanahpedia_family_shimshon_data.sql  tanahpedia_incremental_lookups.sql  tanahpedia_legacy_migration.sql  tanahpedia_place_eretz_yisrael_data.sql  tanahpedia_seed_data.sql  tanahpedia_structure.sql
data/mysql/db-populator/: Cargo.toml
data/mysql/db-populator/src/: main.rs
data/mysql/scripts/: generate-tanahpedia-edge-lab.mjs
data/s3/s3-populator/: Cargo.toml
data/s3/s3-populator/src/: main.rs
data/scheme/: tanah-scheme.json
data/sefaria/mongodb-docker/: .gitattributes  Dockerfile  README.md  entrypoint.sh  init-mongo.sh
data/sefaria/pipelines/perushim-view/: Cargo.toml  PRIORITY_ORDERING.md  README.md
data/sefaria/pipelines/perushim-view/src/: aggregation.rs  lib.rs  main.rs
data/sefaria/pipelines/tanah-view/: Cargo.toml  README.md  tanah_view.schema.json
data/sefaria/pipelines/tanah-view/src/: aggregation.rs  lib.rs  main.rs  models.rs
data/sefaria/pipelines/tanah-view/tests/: aggregation_test.rs
data/sefaria/retrieval/: README.md
data/sefaria/setup-and-population/: .env.example  Cargo.toml
data/sefaria/setup-and-population/src/: main.rs
data/sqlite/: perushim_catalog_structure.sql  perushim_notes_structure.sql  tanah_structure.sql
devops/: bump-cargo-version.mts  bump-cargo-version.ts  docker-compose.yml  get-module-version.ts  md-dead-link-check-wrapper.py  merge-coverage.mts  package-lock.json  package.json  populate-test-db.mts  precommit-biome.mjs  pyproject.ci.toml  pyproject.toml  setup-dev-env.mts  tanah_test_data.sql  tanah_test_structure.sql  tsconfig.json
devops/coverage/lcov-docker/: Dockerfile
devops/deploy/: README.md  api-deployer.mts  deployer-base.mts  index.mts  ssh.mts  website-deployer.mts
devops/deploy/bare-metal-deploy/: api-deployer.mts  website-deployer.mts
devops/deploy/bare-metal-deploy/ssh/: index.mts  ssh-config.mts
devops/deploy/bulletin-deploy/: index.mts
devops/deploy/data-deploy/: .env.example  index.mts
devops/deploy/ecr-deploy/: .env.example  admin-deployer.mts  api-deployer.mts  ecr-client.mts  ecr-deployer-base.mts  index.mts  website-deployer.mts
devops/deploy/ssh/: index.mts  ssh-connection.mts
devops/github/ci/: is-version-newer-than-baseline.ts
devops/github/release/: get-version.ts
devops/scripts/: init-localstack.sh
web/api/: .dev.env  .gitignore  .test.env  Cargo.toml  Dockerfile  Makefile.toml
web/api/.config/: nextest.toml
web/api/.husky/: pre-commit
web/api/.playwright-report/e2e/: index.html
web/api/devops/: bump_version.sh
web/api/docs/: migration.md
web/api/entities/: Cargo.toml
web/api/entities/src/: article.rs  author.rs  lib.rs  perek.rs  sefer.rs
web/api/entities/src/tanahpedia/: animal.rs  astronomical_object.rs  astronomical_object_creation_day.rs  category_homepage.rs  entry.rs  entry_entity.rs  entry_revision.rs  entry_synonym.rs  entry_synonym_disambiguation.rs  event.rs  event_date_range.rs  event_place.rs  god.rs  lookup_name_type.rs  lookup_parent_child_type.rs  lookup_parent_role.rs  lookup_union_end_reason.rs  lookup_union_type.rs  mod.rs  nation.rs  nation_source_nation.rs  nation_territory.rs  non_tanah_source.rs  object.rs  person.rs  person_birth_date.rs  person_birth_place.rs  person_death_cause.rs  person_death_date.rs  person_name.rs  person_name_giver_god.rs  (+30 more)
web/api/src/: main.rs  schema.rs
web/api/src/common/: auth.rs  error_handling.rs  mod.rs
web/api/src/dtos/: article.rs  author.rs  mod.rs  perek.rs  sefer.rs  starter.rs  tanahpedia_entry_revision.rs
web/api/src/providers/: database.rs
web/api/src/resolvers/: articles_resolver.rs  authors_resolver.rs  mod.rs  perakim_resolver.rs  sefarim_resolver.rs  starter_resolver.rs  tanahpedia_revisions_resolver.rs
web/api/src/services/: articles_service.rs  authors_service.rs  mod.rs  perakim_service.rs  sefarim_service.rs  tanahpedia_revisions_service.rs
web/api/src/startup/: app.rs  mod.rs  schema_builder.rs  telemetry.rs
web/api/tests/: .gitignore  cargo_wrapper.mts  coverage-e2e.mts  launch-api-for-tests.mts  package-lock.json  package.json  playwright-global-setup.cjs  playwright-global-setup.mjs  playwright-global-setup.mts  playwright-global-setup.ts  playwright-global-teardown.js  playwright-global-teardown.mjs  playwright.config.ts  tsconfig.json
web/api/tests/e2e/: authors-service.test.ts
web/bulletin/: .gitignore  Cargo.toml  Dockerfile  Makefile.toml
web/bulletin/.config/: nextest.toml
web/bulletin/examples/: generate_sample.rs
web/bulletin/scripts/: extract-tanach-text.mjs
web/bulletin/src/: db.rs  handlers.rs  lib.rs  main.rs  models.rs  pdf.rs  services.rs  tanach.rs
web/bulletin/tests/: pdf_integration.rs
web/qa-service/: .dev.env  .gitignore  Cargo.toml  README.md
web/qa-service/scripts/: download-models-direct.sh  download-models.py  requirements.txt
web/qa-service/src/: config.rs  main.rs
web/qa-service/src/pipeline/: ingest.rs  mod.rs  reason.rs  retrieve.rs  surface.rs  validate.rs
web/qa-service/src/routes/: ask.rs  debug.rs  health.rs  mod.rs
(+778 files in other folders)
