[workspace]
resolver = "2"
members = [
    "authors",
    "mysql/db-populator",
    "s3/s3-populator",
    "sefaria/setup-and-population",
    "sefaria/pipelines/tanah-view",
]

[workspace.package]
version = "0.1.2"
edition = "2024"
license = "MIT"
authors = ["doradsoft <doradsoft@gmail.com>"]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
mongodb = "3"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
chrono = "0.4"
chrono-tz = "0.10"
icu_calendar = "2.1"
dotenvy = "0.15"
rusqlite = { version = "0.32", features = ["bundled"] }
bson = "2"
sqlx = { version = "0.8", features = ["runtime-tokio", "mysql"] }
sunrise = "3"
