[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "devops"
version = "0.1.0"
description = "DevOps utilities for bible-on-site"
authors = [{ name = "DoradSoft", email = "doradsoft@gmail.com" }]
requires-python = ">=3.12"

dependencies = ["pre-commit"]

[tool.md_dead_link_check]
exclude_links = ["http://localhost:*", "https://localhost:*"]
