
[package]
name = "bible-on-site-api"
description = "Bible on Site API"
license-file = "../../license"
repository = "https://github.com/bible-on-site/bible-on-site"
publish = false
version = "0.1.15"
edition = "2024"

[dependencies]
actix-web = { version = "4.12.1", default-features = false, features = [
    "macros",
    "http2",
    "compress-brotli",
    "ws",
] }
async-graphql = { version = "7.0.17", default-features = false, features = [
    "playground",
] }
async-graphql-actix-web = "7.0.17"
dotenvy = "0.15.7"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
anyhow = "1.0.100"
tracing = "0.1.44"
tracing-actix-web = "0.7.20"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tracing-bunyan-formatter = { version = "0.3.10", default-features = false }
tracing-log = "0.2.0"
derive_more = { version = "2.1.1", features = ["display"] }
sea-orm = { version = "1.1.19", default-features = false, features = [
    "sqlx-mysql",
    "runtime-actix-native-tls",
] }
entities = { path = "./entities" }

[dev-dependencies]
cargo-llvm-cov = "0.6.21"
cargo-make = "0.37.24"
semver-bump = "1.0.1"
tomato-toml = { git = "https://github.com/doradsoft/rust-tomato-toml", branch = "latest" }
sea-orm = { version = "1.1.19", default-features = false, features = ["mock"] }

[[bin]]
name = "api"
path = "src/main.rs"

[workspace]
members = [".", "./entities"]

[profile.dev]
incremental = true

[package.metadata.release]
pre-release-commit-message = "chore(release): {{version}} [skip ci]"

[package.metadata.cargo-udeps.ignore] #TODO: somehow the ignore list got ignored...
normal = ["semver-bump", "tomato-toml"]
build = ["semver-bump", "tomato-toml"]
