
[package]
name = "bible-on-site-api"
description = "Bible on Site API"
license-file = "../../license"
repository = "https://github.com/bible-on-site/bible-on-site"
publish = false
version = "0.1.29"
edition = "2024"

[dependencies]
actix-web = { version = "4.13.0", default-features = false, features = [
    "macros",
    "http2",
    "compress-brotli",
    "ws",
] }
async-graphql = { version = "7.2.1", default-features = false, features = [
    "playground",
] }
async-graphql-actix-web = "7.2.1"
dotenvy = "0.15.7"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
anyhow = "1.0.102"
tracing = "0.1.44"
tracing-actix-web = "0.7.21"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
tracing-bunyan-formatter = { version = "0.3.10", default-features = false }
tracing-log = "0.2.0"
derive_more = { version = "2.1.1", features = ["display"] }
sea-orm = { version = "1.1.20", default-features = false, features = [
    "sqlx-mysql",
    "runtime-actix-native-tls",
] }
entities = { path = "./entities" }

[dev-dependencies]
cargo-llvm-cov = "0.8.7"
cargo-make = "0.37.24"
semver-bump = "1.0.1"
tomato-toml = { git = "https://github.com/doradsoft/rust-tomato-toml", branch = "latest" }
sea-orm = { version = "1.1.20", default-features = false, features = ["mock"] }

[[bin]]
name = "api"
path = "src/main.rs"

[workspace]
members = [".", "./entities"]

[profile.dev]
incremental = true

[package.metadata.release]
pre-release-commit-message = "chore(release): {{version}} [skip ci]"

[package.metadata.cargo-udeps.ignore] #TODO: somehow the ignore list got ignored...
normal = ["semver-bump", "tomato-toml"]
build = ["semver-bump", "tomato-toml"]
