[package]
name = "bible-on-site-qa-service"
description = "Tanah RAG QA service — embedding retrieval + extractive QA"
license-file = "../../license"
repository = "https://github.com/bible-on-site/bible-on-site"
publish = false
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = { version = "4.9", default-features = false, features = ["macros"] }
tokio = { version = "1.48", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-native-tls", "mysql", "derive"] }
ort = "2.0.0-rc.11"
tokenizers = { version = "0.21", default-features = false, features = ["fancy-regex"] }
ndarray = "0.17"

[[bin]]
name = "qa-service"
path = "src/main.rs"
