[tool.poetry]
name = "dates-generator"
version = "0.1.1"
description = ""
authors = ["doradsoft <doradsoft@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
hdate = "^1.0.0"
jupyter = "^1.0.0"
ipykernel = "^6.29.4"
tzdata = "^2024.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
