[tool.poetry]
name = "dates-generator"
version = "0.1.1"
description = ""
authors = ["doradsoft <doradsoft@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.14"
hdate = "^1.1.2"
tzdata = "^2025.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
