[package]
name = "db-populator"
description = "Populate MySQL database with Tanah structure and test data"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
tokio.workspace = true
anyhow.workspace = true
clap = { version = "4", features = ["derive", "env"] }
dotenvy.workspace = true
sqlx-core = { version = "0.8", features = ["_rt-tokio"] }
sqlx-mysql = "0.8"
