[package]
name = "db-populator"
description = "Populate MySQL database with Tanah structure and test data"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
tokio.workspace = true
anyhow.workspace = true
clap = { version = "4", features = ["derive", "env"] }
dotenvy.workspace = true
sqlx-core = { version = "0.9", features = ["_rt-tokio"] }
# sqlx-mysql 0.9 made the RSA auth backend a non-default feature; MySQL's
# default caching_sha2_password auth needs it, so enable it explicitly.
sqlx-mysql = { version = "0.9", features = ["rsa"] }
