[package]
name = "s3-populator"
version = "0.1.1"
edition = "2021"
description = "Populate S3 buckets with test data for development and testing"

[dependencies]
anyhow = "1.0"
aws-config = { version = "1.1", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.15"
clap = { version = "4.4", features = ["derive", "env"] }
crc32fast = "1.3"
dotenvy = "0.15"
miniz_oxide = "0.9"
reqwest = { version = "0.13", features = ["blocking"] }
tokio = { version = "1.35", features = ["full"] }
