[package]
name = "entities"
version = "0.1.0"
edition = "2024"

[lib]
name = "entities"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
sea-orm = { version = "1.1.19", default-features = false, features = [
    "macros",
    "sqlx-mysql",
    "runtime-actix-native-tls",
    "with-chrono",
] }

[dev-dependencies]
sea-orm = { version = "1.1.19", default-features = false, features = ["mock"] }
