[package]
name = "tanah-view"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
mongodb.workspace = true
anyhow.workspace = true
clap.workspace = true
dotenvy.workspace = true
chrono.workspace = true
chrono-tz.workspace = true
rusqlite.workspace = true
bson.workspace = true
icu_calendar.workspace = true
sunrise.workspace = true

[features]
# Enable integration tests that require MongoDB with Sefaria dump
integration = []

[dev-dependencies]
once_cell = "1"
regex = "1"
